fixes styling issue with too much empty after content in photoList

--- a/frontend/src/styles/PhotoList.scss
+++ b/frontend/src/styles/PhotoList.scss
@@ -5,9 +5,3 @@
   gap: 1em;
   padding: 16px;
 }
-
-.photo-list:after {
-  content: "";
-  flex: 0 1 30%;
-  margin: 5px;
-}
